##===================================================================================================
##                              Copyright 2016 NumScale SAS
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
##===================================================================================================

## Larger test suites go there
add_subdirectory(combine)
add_subdirectory(div)
add_subdirectory(extract)
add_subdirectory(genmask)
add_subdirectory(insert)
add_subdirectory(load)
add_subdirectory(aligned_load)
add_subdirectory(make)
add_subdirectory(rem)
add_subdirectory(shuffle)
add_subdirectory(slice)
add_subdirectory(slide)
add_subdirectory(splat)
add_subdirectory(split)

set ( SOURCES
      abs.cpp
      abs.saturated.cpp
      acos.cpp
      acos.accurate.cpp
      acosd.cpp
      acosd.accurate.cpp
      acosh.cpp
      acospi.cpp
      acospi.accurate.cpp
      acot.cpp
      acotd.cpp
      acoth.cpp
      acotpi.cpp
      acsc.cpp
      acscd.cpp
      acsch.cpp
      acscpi.cpp
      aligned_store.cpp
      all.cpp
      any.cpp
      arg.cpp
      asec.cpp
      asecd.cpp
      asech.cpp
      asecpi.cpp
      asin.cpp
      asind.cpp
      asinh.cpp
      asinpi.cpp
      atan2.cpp
      atan2d.cpp
      atan2pi.cpp
      atan.cpp
      atand.cpp
      atanh.cpp
      atanpi.cpp
      autofold.cpp
      autosplat.cpp
      average.cpp
      bitfloating.cpp
      bitget.cpp
      bitinteger.cpp
      bitofsign.cpp
      bits.cpp
      bitset.cpp
      bitwise_and.cpp
      bitwise_andnot.cpp
      bitwise_cast.cpp
      bitwise_not.cpp
      bitwise_notand.cpp
      bitwise_notor.cpp
      bitwise_or.cpp
      bitwise_ornot.cpp
      bitwise_select.cpp
      bitwise_xor.cpp
      broadcast.cpp
      cbrt.cpp
      ceil.cpp
      clz.cpp
      compare_equal.cpp
      compare_greater.cpp
      compare_greater_equal.cpp
      compare_less.cpp
      compare_less_equal.cpp
      compare_not_equal.cpp
      complement.cpp
      conj.cpp
      copysign.cpp
      correct_fma.cpp
      cos.cpp
      cosd.cpp
      cosh.cpp
      cospi.cpp
      cot.cpp
      cotd.cpp
      coth.cpp
      cotpi.cpp
      csc.cpp
      cscd.cpp
      csch.cpp
      cscpi.cpp
      ctz.cpp
      cummax.cpp
      cummin.cpp
      cumprod.cpp
      cumsum.cpp
      dec.cpp
      dec.saturated.cpp
      deinterleave.cpp
      deinterleave_first.cpp
      deinterleave_second.cpp
      dist.cpp
      dist.saturated.cpp
      divides.cpp
      divides.saturated.cpp
      dot.cpp
      enumerate.cpp
      erfc.cpp
      erf.cpp
      erfcx.cpp
      exp10.cpp
      exp2.cpp
      exp.cpp
      expm1.cpp
      exponent.cpp
      exponentbits.cpp
      exprecnegc.cpp
      exprecneg.cpp
      expx2.cpp
      ffs.cpp
      firstbitset.cpp
      firstbitunset.cpp
      floor.cpp
      fma.cpp
      fma.conformant.cpp
      fms.cpp
      fnma.cpp
      fnms.cpp
      frac.cpp
      frexp.cpp
      gamma.cpp
      gammaln.cpp
      genmaskc.cpp
      group.cpp
      groups.cpp
      hi.cpp
      hmsb.cpp
      hypot.cpp
      iceil.cpp
      if_allbits_else.cpp
      if_dec.cpp
      if_else_allbits.cpp
      if_else.cpp
      if_else_zero.cpp
      if_inc.cpp
      ifloor.cpp
      if_minus.cpp
      ifnot_dec.cpp
      ifnot_inc.cpp
      ifnot_minus.cpp
      ifnot_plus.cpp
      if_one_else_zero.cpp
      if_plus.cpp
      if_zero_else.cpp
      if_zero_else_one.cpp
      ilog2.cpp
      ilogb.cpp
      inc.cpp
      inc.saturated.cpp
      indeg.cpp
      inearbyint.cpp
      inrad.cpp
      interleave.cpp
      interleave_even.cpp
      interleave_first.cpp
      interleave_odd.cpp
      interleave_second.cpp
      ifix.cpp
      iround.cpp
      is_denormal.cpp
      is_equal.cpp
      is_equal_with_equal_nans.cpp
      is_eqz.cpp
      is_even.cpp
      is_finite.cpp
      is_flint.cpp
      is_gez.cpp
      is_greater.cpp
      is_greater_equal.cpp
      is_gtz.cpp
      is_imag.cpp
      is_included.cpp
      is_included_c.cpp
      is_inf.cpp
      is_invalid.cpp
      is_less.cpp
      is_less_equal.cpp
      is_lessgreater.cpp
      is_lez.cpp
      is_ltz.cpp
      is_nan.cpp
      is_negative.cpp
      is_nez.cpp
      is_ngez.cpp
      is_ngtz.cpp
      is_nlez.cpp
      is_nltz.cpp
      is_normal.cpp
      is_not_denormal.cpp
      is_not_equal.cpp
      is_not_equal_with_equal_nans.cpp
      is_not_greater.cpp
      is_not_greater_equal.cpp
      is_not_imag.cpp
      is_not_infinite.cpp
      is_not_less.cpp
      is_not_less_equal.cpp
      is_not_nan.cpp
      is_not_real.cpp
      is_odd.cpp
      is_ord.cpp
      is_positive.cpp
      is_real.cpp
      is_simd_logical.cpp
      itrunc.cpp
      is_unord.cpp
      ldexp.cpp
      lo.cpp
      log10.cpp
      log1p.cpp
      log2.cpp
      log.cpp
      logical_and.cpp
      logical_andnot.cpp
      logical_notand.cpp
      logical_not.cpp
      logical_notor.cpp
      logical_or.cpp
      logical_ornot.cpp
      logical_xor.cpp
      lookup.cpp
      majority.cpp
      mantissa.cpp
      mask2logical.cpp
      max.cpp
      maximum.cpp
      maximum.splatted.cpp
      maxmag.cpp
      maxnum.cpp
      maxnummag.cpp
      meanof.cpp
      min.cpp
      minmod.cpp
      minimum.cpp
      minimum.splatted.cpp
      minmag.cpp
      minnum.cpp
      minnummag.cpp
      minus.cpp
      minus.saturated.cpp
      modf.cpp
      multiplies.cpp
      multiplies.saturated.cpp
      nbtrue.cpp
      nearbyint.cpp
      negate.cpp
      negatenz.cpp
      negif.cpp
      negifnot.cpp
      nextafter.cpp
      next.cpp
      none.cpp
      nthroot.cpp
      oneminus.cpp
      oneminus.saturated.cpp
      plus.cpp
      plus.saturated.cpp
      pow_abs.cpp
      pow.cpp
      pow2.cpp
      predecessor.cpp
      prev.cpp
      prod.cpp
      rec.cpp
      rem_pio2_cephes.cpp
      rem_pio2.cpp
      rem_pio2_medium.cpp
      rem_pio2_straight.cpp
      rem_2pi.cpp
      remquo.cpp
      repeat_lower_half.cpp
      repeat_upper_half.cpp
      reversebits.cpp
      reverse.cpp
      rol.cpp
      ror.cpp
      round.cpp
      rrol.cpp
      rror.cpp
      rshl.cpp
      rshr.cpp
      rsqrt.cpp
      safe_max.cpp
      safe_min.cpp
      sec.cpp
      secd.cpp
      sech.cpp
      secpi.cpp
      shift_left.cpp
      shift_right.cpp
      shr.cpp
      sign.cpp
      significants.cpp
      signnz.cpp
      sinc.cpp
      sincos.cpp
      sincosd.cpp
      sincospi.cpp
      sincpi.cpp
      sin.cpp
      sind.cpp
      sinhc.cpp
      sinhcosh.cpp
      sinh.cpp
      sinpi.cpp
      split_multiplies.cpp
      sqr_abs.cpp
      sqr.cpp
      sqr.saturated.cpp
      sqrt1pm1.cpp
      sqrt.cpp
      stirling.cpp
      store.cpp
      stream.cpp
      successor.cpp
      sum.cpp
      swapbytes.cpp
      tan.cpp
      tand.cpp
      tanh.cpp
      tanpi.cpp
      tenpower.cpp
      tofloat.cpp
      toint.cpp
      toint.saturated.cpp
      touint.cpp
      touint.saturated.cpp
      trunc.cpp
      two_add.cpp
      twopower.cpp
      two_prod.cpp
      two_split.cpp
      ulpdist.cpp
      unary_minus.cpp
      unary_minus.saturated.cpp
      unary_plus.cpp
    )

make_unit( "function.simd"  ${SOURCES})
make_coverage("function.simd"  ${SOURCES})
