##===================================================================================================
##                              Copyright 2016 NumScale SAS
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
##===================================================================================================

## Larger test suites go there
add_subdirectory(cast)
add_subdirectory(combine)
add_subdirectory(div)
add_subdirectory(extract)
add_subdirectory(genmask)
add_subdirectory(insert)
add_subdirectory(load)
add_subdirectory(aligned_load)
add_subdirectory(make)
add_subdirectory(rem)
add_subdirectory(shuffle)
add_subdirectory(slice)
add_subdirectory(slide)
add_subdirectory(splat)
add_subdirectory(split)
add_subdirectory(store)

set ( SOURCES
      abs.regular.cpp
      abs.saturated.cpp
      acos.regular.cpp
      acos.pedantic.cpp
      acosd.regular.cpp
      acosd.pedantic.cpp
      acosh.cpp
      acospi.regular.cpp
      acospi.pedantic.cpp
      acot.cpp
      acotd.cpp
      acoth.cpp
      acotpi.cpp
      acsc.cpp
      acscd.cpp
      acsch.cpp
      acscpi.cpp
      aligned_store.cpp
      all.cpp
      any.cpp
      arg.cpp
      asec.cpp
      asecd.cpp
      asech.cpp
      asecpi.cpp
      asin.cpp
      asind.cpp
      asinh.cpp
      asinpi.cpp
      atan2.regular.cpp
      atan2.pedantic.cpp
      atan2d.regular.cpp
      atan2d.pedantic.cpp
      atan2pi.regular.cpp
      atan2pi.pedantic.cpp
      atan.cpp
      atand.cpp
      atanh.cpp
      atanpi.cpp
      autofold.cpp
      autosplat.cpp
      average.cpp
      bitfloating.cpp
      bitinteger.cpp
      bitofsign.cpp
      bits.cpp
      bitwise_and.cpp
      bitwise_andnot.cpp
      bitwise_cast.cpp
      bitwise_not.cpp
      bitwise_notand.cpp
      bitwise_notor.cpp
      bitwise_or.cpp
      bitwise_ornot.cpp
      bitwise_select.cpp
      bitwise_xor.cpp
      broadcast.cpp
      cbrt.cpp
      ceil.cpp
      clamp.cpp
      clz.cpp
      compare_equal.cpp
      compare_greater.cpp
      compare_greater_equal.cpp
      compare_less.cpp
      compare_less_equal.cpp
      compare_not_equal.cpp
      complement.cpp
      conj.cpp
      copysign.cpp
      cos.cpp
      cosd.cpp
      cosh.cpp
      cospi.cpp
      cot.cpp
      cotd.cpp
      coth.cpp
      cotpi.cpp
      csc.cpp
      cscd.cpp
      csch.cpp
      cscpi.cpp
      ctz.cpp
      cummax.cpp
      cummin.cpp
      cumprod.cpp
      cumsum.cpp
      dec.regular.cpp
      dec.saturated.cpp
      deinterleave.cpp
      deinterleave_first.cpp
      deinterleave_second.cpp
      dist.regular.cpp
      dist.saturated.cpp
      divides.regular.cpp
      divides.saturated.cpp
      dot.cpp
      enumerate.cpp
      eps.cpp
      erfc.cpp
      erf.cpp
      erfcx.cpp
      exp10.cpp
      exp2.cpp
      exp.cpp
      expm1.cpp
      exponent.cpp
      exponentbits.cpp
      exprecnegc.cpp
      exprecneg.cpp
      expx2.cpp
      ffs.cpp
      firstbitset.cpp
      firstbitunset.cpp
      floor.cpp
      fmasubadd.cpp
      fma.regular.cpp
      fma.pedantic.cpp
      fms.cpp
      fnma.cpp
      fnms.cpp
      frac.cpp
      frexp.raw.cpp
      frexp.regular.cpp
      frexp.pedantic.cpp
      gamma.cpp
      gammaln.cpp
      genmaskc.cpp
      group.cpp
      groups.cpp
      hi.cpp
      hmsb.cpp
      hypot.pedantic.cpp
      hypot.regular.cpp
      iceil.cpp
      if_allbits_else.cpp
      if_dec.cpp
      if_else_allbits.cpp
      if_else.cpp
      if_else_zero.cpp
      if_inc.cpp
      ifloor.cpp
      if_minus.cpp
      ifnot_dec.cpp
      ifnot_inc.cpp
      ifnot_minus.cpp
      ifnot_plus.cpp
      if_one_else_zero.cpp
      if_plus.cpp
      if_zero_else.cpp
      if_zero_else_one.cpp
      ifrexp.raw.cpp
      ifrexp.regular.cpp
      ifrexp.pedantic.cpp
      ilog2.cpp
      ilogb.cpp
      inc.regular.cpp
      inc.saturated.cpp
      indeg.cpp
      inearbyint.regular.cpp
      inearbyint.pedantic.cpp
      inrad.cpp
      interleave.cpp
      interleave_even.cpp
      interleave_first.cpp
      interleave_odd.cpp
      interleave_second.cpp
      ifix.cpp
      iround.cpp
      is_denormal.cpp
      is_equal.cpp
      is_equal_with_equal_nans.cpp
      is_eqz.cpp
      is_even.cpp
      is_finite.cpp
      is_flint.cpp
      is_gez.cpp
      is_greater.cpp
      is_greater_equal.cpp
      is_gtz.cpp
      is_imag.cpp
      isincluded.cpp
      isincluded_c.cpp
      is_inf.cpp
      is_invalid.cpp
      is_less.cpp
      is_less_equal.cpp
      is_lessgreater.cpp
      is_lez.cpp
      is_ltz.cpp
      is_nan.cpp
      is_negative.cpp
      is_nez.cpp
      is_ngez.cpp
      is_ngtz.cpp
      is_nlez.cpp
      is_nltz.cpp
      is_normal.cpp
      is_not_denormal.cpp
      is_not_equal.cpp
      is_not_equal_with_equal_nans.cpp
      is_not_greater.cpp
      is_not_greater_equal.cpp
      is_not_imag.cpp
      is_not_infinite.cpp
      is_not_less.cpp
      is_not_less_equal.cpp
      is_not_nan.cpp
      is_not_real.cpp
      is_odd.cpp
      is_ord.cpp
      is_positive.cpp
      is_real.cpp
      is_simd_logical.cpp
      itrunc.cpp
      is_unord.cpp
      ldexp.pedantic.cpp
      ldexp.regular.cpp
      lo.cpp
      log1p.regular.cpp
      log1p.musl.cpp
      log1p.plain.cpp
      log10.regular.cpp
      log10.musl.cpp
      log10.plain.cpp
      log2.regular.cpp
      log2.musl.cpp
      log2.plain.cpp
      log.plain.cpp
      log.regular.cpp
      log.musl.cpp
      logical_and.cpp
      logical_andnot.cpp
      logical_notand.cpp
      logical_not.cpp
      logical_notor.cpp
      logical_or.cpp
      logical_ornot.cpp
      logical_xor.cpp
      lookup.cpp
      majority.cpp
      mantissa.cpp
      mask2logical.cpp
      max.cpp
      maximum.cpp
      maximum.splatted.cpp
      maxmag.cpp
      maxnum.cpp
      maxnummag.cpp
      meanof.cpp
      min.cpp
      minmod.cpp
      minimum.cpp
      minimum.splatted.cpp
      minmag.cpp
      minnum.cpp
      minnummag.cpp
      minus.regular.cpp
      minus.saturated.cpp
      modf.cpp
      multiplies.regular.cpp
      multiplies.saturated.cpp
      nbtrue.cpp
      nearbyint.cpp
      nearbyint.raw.cpp
      negate.cpp
      negatenz.cpp
      if_neg.cpp
      ifnot_neg.cpp
      nextafter.cpp
      next.cpp
      none.cpp
      nthroot.cpp
      oneminus.regular.cpp
      oneminus.saturated.cpp
      plus.regular.cpp
      plus.saturated.cpp
      pow_abs.cpp
      pow.cpp
      pow2.cpp
      predecessor.cpp
      prev.cpp
      prod.cpp
      rec.regular.cpp
      rec.raw.cpp
      rem_pio2_cephes.cpp
      rem_pio2.cpp
      rem_pio2_medium.cpp
      rem_pio2_straight.cpp
      rem_2pi.cpp
      remquo.cpp
      repeat_lower_half.cpp
      repeat_upper_half.cpp
      reversebits.cpp
      reverse.cpp
      rol.cpp
      ror.cpp
      round.cpp
      rrol.cpp
      rror.cpp
      rshl.cpp
      rshr.cpp
      rsqrt.regular.cpp
      rsqrt.raw.cpp
      rsqrt.pedantic.cpp
      safe_max.cpp
      safe_min.cpp
      sec.cpp
      secd.cpp
      sech.cpp
      secpi.cpp
      shift_left.cpp
      shift_right.cpp
      shr.cpp
      sign.cpp
      significants.cpp
      signnz.cpp
      sinc.cpp
      sincos.cpp
      sincosd.cpp
      sincospi.cpp
      sincpi.cpp
      sin.cpp
      sind.cpp
      sinhc.cpp
      sinhcosh.cpp
      sinh.cpp
      sinpi.cpp
      split_multiplies.cpp
      sqr_abs.cpp
      sqr.regular.cpp
      sqr.saturated.cpp
      sqrt1pm1.cpp
      sqrt.regular.cpp
      sqrt.raw.cpp
      stirling.cpp
      subadd.cpp
      successor.cpp
      sum.cpp
      swapbytes.cpp
      tan.cpp
      tand.cpp
      tanh.cpp
      tanpi.cpp
      tenpower.cpp
      tofloat.cpp
      toint.regular.cpp
      toint.saturated.cpp
      touint.regular.cpp
      touint.saturated.cpp
      trunc.raw.cpp
      trunc.regular.cpp
      quadrant.cpp
      two_add.cpp
      twopower.cpp
      two_prod.cpp
      two_split.cpp
      ulpdist.cpp
      unary_minus.regular.cpp
      unary_minus.saturated.cpp
      unary_plus.cpp
    )

make_unit( "function.simd"  ${SOURCES})
make_coverage("function.simd"  ${SOURCES})
